--- a/src/main/java/org/example/styles.css
+++ b/src/main/java/org/example/styles.css
@@ -5,5 +5,14 @@ color: black;
 }
 .title{
 color: black;
+text-align:center;
 }
-//C:\Program Files\JetBrains\IntelliJ IDEA Community Edition 2024.3.1.1\bin
+.members{
+padding: 2%;
+color: black;
+background-color: white;
+border-radius: 5%;
+}
+.table-m{
+border: 3%;
+}
